# banding-repro

./: Cargo.toml  chrome.html
src/: main.rs
ui/: appwindow.slint
