[package]
name = "banding"
version = "0.1.0"
authors = ["Walter Kalata <ping@walter.dev>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint =  { version = "1.6", default-features = false, features = ["compat-1-2", "std", "gettext", "accessibility", "backend-winit", "renderer-skia-opengl" ]  }
i-slint-backend-winit = { version=  "1.6" }

[build-dependencies]
slint-build = "1.6"
